--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:name=".activity.StepGoalActivity"
             android:screenOrientation="portrait"
             android:exported="true"/>
+        <activity
+            android:name=".activity.DetailsReportActivity"
+            android:screenOrientation="portrait"
+            android:exported="true"/>
     </application>
 
 </manifest>
